--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 <head>
 <title>Hello Coursera</title>
 <body>
-	<h1> Hello Coursera!</h1>
+	<h1> Hello Coursera! It is a great course</h1>
 </body>
 </head>
 </html>
