--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -27,6 +27,15 @@
               <img src="images/star-k-logo.png" alt="Kosher certification">
               <span>Kosher Certified</span>
             </p>
+          </div>
+
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
       </div>
     </nav>
   </header>
