--- a/week2_solution/index.html
+++ b/week2_solution/index.html
@@ -10,7 +10,7 @@
   </head>
 <body>
   <div class="container">
-  <h1>Shopping List Check Off</h1>
+  <h1>Shopping List Check Off by moisespd</h1>
 
   <div class="row">
 
