Week 3 solution: minor improvements

--- a/week3_solution/foundList.html
+++ b/week3_solution/foundList.html
@@ -6,7 +6,7 @@
 <ol>
   <li ng-repeat="item in list.foundItems">
     <found-item></found-item>
-    <button ng-click="list.onRemove({index: $index})">Remove</button>
+    <button ng-click="list.onRemove({index: $index})">Don't want this one!</button>
     <br>
     &nbsp;
   </li>
